2007-01-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-defines.c:
	* src/hildon-defines.h: Cleaning up hildon-defines.

2007-01-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-find-toolbar.c:
	* src/hildon-program.c:
	* src/hildon-volumebar.c:
	* src/hildon-vvolumebar.c: Adding the proper HAVE_CONFIG where needed.

2007-01-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-composite-widget.c:
	* src/hildon-composite-widget.h:
	* src/hildon-date-editor.c:
	* src/hildon-number-editor.c:
	* src/hildon-time-editor.c:
	* src/hildon-weekday-picker.c:
	* src/Makefile.am:
	* src/hildon-private.c:
	* src/hildon-private.h: Moving "composite widget" to private since
	essentially it's just a handy private function.

	* src/hildon.h: Removing it from exported headers.

	* tests/Makefile.am:
	* tests/Makefile.in:
	* tests/TEST-CASES.txt:
	* tests/check-hildon-composite-widget.c:
	* tests/check_test.c: Removing the composite test case, since it's
	external/not exported anymore.

2007-01-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/changelog: Adding missing.

	* src/hildon-banner.c: Modyfying to allow creation with null window.

	* tests/check-hildon-calendar-popup.c:
	* tests/check-hildon-color-button.c:
	* tests/check-hildon-note.c: Fixing the unit tests.

2007-01-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ChangeLog-hildon-lgpl: Moving to ChangeLog.1.

	* ChangeLog.2: Creating from the ChangeLog. Will hold all changelogs
	before consolidations.

	* debian/changelog:
	* debian/control:
	* debian/hildon-dev.docs:
	* debian/hildon-dev.install:
	* debian/hildon-libs-dev.docs:
	* debian/hildon-libs-dev.install:
	* debian/hildon-libs0-dbg.install:
	* debian/hildon-libs0.install:
	* debian/hildon-libs0.links:
	* debian/hildon0-dbg.install:
	* debian/hildon0.install:
	* debian/rules: Updating the debian stuff.
