@@ -22,20 +22,20 @@
  *
  */
 
-#ifndef __HILDON_INPUT_MODE_HINT_H__
-#define __HILDON_INPUT_MODE_HINT_H__
+#ifndef                                         __HILDON_INPUT_MODE_HINT_H__
+#define                                         __HILDON_INPUT_MODE_HINT_H__
 
 G_BEGIN_DECLS
 
 /* Hildon wrapper for setting the input mode in a GtkEntry 
  * Usage: g_object_set(G_OBJECT(entry), HILDON_INPUT_MODE_HINT, HILDON_INPUT_MODE_HINT_HEXA, NULL);
  */
-#define HILDON_INPUT_MODE_HINT "input-mode"
+#define                                         HILDON_INPUT_MODE_HINT "input-mode"
 
 /* Hildon wrapper for setting the autocapitalization in text widgets.
  * Usage: g_object_set(G_OBJECT(entry), HILDON_AUTOCAP, FALSE, NULL);
  */
-#define HILDON_AUTOCAP "autocap"
+#define                                         HILDON_AUTOCAP "autocap"
 
 /**
  * HildonInputModeHint:
@@ -50,21 +50,26 @@ G_BEGIN_DECLS
  * @HILDON_INPUT_MODE_HINT_TELE: accept only TELEPHONE
  * @HILDON_INPUT_MODE_HINT_TELESPECIAL: accept only TELEPHONE and SPECIAL
  *
- * Keys to set the mode in a GtkEntry widget into ALPHANUMERIC or NUMERIC mode. Note that this is only a hint; it only shows VKB with specified layout. Use it by calling 'g_object_set(G_OBJECT(entry), "input-mode", HILDON_INPUT_MODE_HINT_NUMERIC, NULL);'.
+ * Keys to set the mode in a GtkEntry widget into ALPHANUMERIC or NUMERIC mode. 
+ * Note that this is only a hint; it only shows VKB with specified layout. 
+ * Use it by calling 'g_object_set(G_OBJECT(entry), "input-mode", HILDON_INPUT_MODE_HINT_NUMERIC, NULL);'.
+ * This should not be used to as the only method of verifying user input.
  */
-typedef enum {
-  HILDON_INPUT_MODE_HINT_ALPHANUMERICSPECIAL = 0,
-  HILDON_INPUT_MODE_HINT_NUMERIC,
-  HILDON_INPUT_MODE_HINT_ALPHA,
-  HILDON_INPUT_MODE_HINT_NUMERICSPECIAL,
-  HILDON_INPUT_MODE_HINT_ALPHASPECIAL,
-  HILDON_INPUT_MODE_HINT_ALPHANUMERIC,
-  HILDON_INPUT_MODE_HINT_HEXA,
-  HILDON_INPUT_MODE_HINT_HEXASPECIAL,
-  HILDON_INPUT_MODE_HINT_TELE,
-  HILDON_INPUT_MODE_HINT_TELESPECIAL
+typedef enum 
+{
+    HILDON_INPUT_MODE_HINT_ALPHANUMERICSPECIAL = 0,
+    HILDON_INPUT_MODE_HINT_NUMERIC,
+    HILDON_INPUT_MODE_HINT_ALPHA,
+    HILDON_INPUT_MODE_HINT_NUMERICSPECIAL,
+    HILDON_INPUT_MODE_HINT_ALPHASPECIAL,
+    HILDON_INPUT_MODE_HINT_ALPHANUMERIC,
+    HILDON_INPUT_MODE_HINT_HEXA,
+    HILDON_INPUT_MODE_HINT_HEXASPECIAL,
+    HILDON_INPUT_MODE_HINT_TELE,
+    HILDON_INPUT_MODE_HINT_TELESPECIAL
 
 } HildonInputModeHint;
 
 G_END_DECLS
-#endif /* __HILDON_INPUT_MODE_HINT_H__ */
+
+#endif                                          /* __HILDON_INPUT_MODE_HINT_H__ */
