@@ -1,5 +1,10 @@
 2007-01-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
+	* src/hildon-input-mode-hint.h: Cleaning up the
+	hildon-input-mode-hint.
+
+2007-01-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
 	* src/hildon-defines.c:
 	* src/hildon-defines.h: Cleaning up hildon-defines.
 
